--- a/package.json
+++ b/package.json
@@ -11,10 +11,17 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.3.4",
+    "bcrypt": "^5.1.0",
     "dotenv": "^16.0.3",
     "download": "^8.0.0",
     "express": "^4.18.2",
+    "express-validator": "^6.15.0",
+    "google-auth-library": "^8.7.0",
+    "jsonwebtoken": "^9.0.0",
+    "mongoose": "^7.0.3",
+    "nodemailer": "^6.9.1",
     "nodemon": "^2.0.22",
-    "request": "^2.81.0"
+    "request": "^2.81.0",
+    "validator": "^13.9.0"
   }
 }
